# Twitch-Bot

./: .gitignore  README.md  __main__.py  client.py  main.py  pyproject.toml  styles.qss
.cipher/: settings.json
_parser/: event_parser.py  message_parser.py
cogs/: fight.py  misc.py  modview.py
commands/: __init__.py  abc.py  cog.py  command.py  context.py  cooldowns.py  event.py
models/: __init__.py  chatter.py  eventsub.py  exceptions.py  message.py  streamer.py  user.py
network/: __init__.py  client.py  exceptions.py  http.py  websocket.py
src/: client.py  fight.py  misc.py
twitch_bot/: QtCharts.py  QtCore.py  QtGui.py  QtWidgets.py  __init__.py  client.py  exceptions.py
twitch_bot/_parser/: __init__.py  event_parser.py
twitch_bot/commands/: __init__.py  abc.py  cog.py  command.py  context.py  event.py  exceptions.py
twitch_bot/core/: application.py
twitch_bot/ext/commands/: __init__.py  cog.py  core.py  meta.py
twitch_bot/ext/eventsub/: __init__.py
twitch_bot/ext/pubsub/: __init__.py
twitch_bot/ext/routines/: __init__.py
twitch_bot/ext/sounds/: __init__.py
twitch_bot/models/: __init__.py  eventsub.py  exceptions.py  message.py  streamer.py  user.py
twitch_bot/network/: __init__.py  client.py  exceptions.py  http.py  websocket.py
twitch_bot/ui/: body.py  logs.py  menubar.py  sidebar.py  stack.py  systemtray.py  window.py
ui/: __init__.py  logs.py  sidebar.py  stack.py  systemtray.py  window.py
